カードをgrid中央に配置

--- a/src/scss/Base.scss
+++ b/src/scss/Base.scss
@@ -9,6 +9,8 @@
 .pokemonCardContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  align-items: center;
   gap: 20px;
   margin-top: 20px;
 }
