--- a/src/scss/Base.scss
+++ b/src/scss/Base.scss
@@ -1,4 +1,7 @@
 /* 全ページの基本設定 */
+@use 'mixins'; // ミックスイン読み込み
+
+/* スタイル */
 .App {
   text-align: center;
   width: 100%;
@@ -13,4 +16,25 @@
   align-items: center;
   gap: 20px;
   margin-top: 20px;
+}
+
+// ページ移動ボタン
+.btn {
+  padding: 30px 0;
+  @include mixins.itemCenter;
+
+  button {
+    margin: 10px 30px;
+    padding: 10px 30px;
+    background-color: floralwhite;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 5px 5px 6px 0px rgba(96, 58, 136, 0.75);
+    cursor: pointer;
+    transition: all 0.15s;
+
+    &:hover {
+      transform: translateY(3px);
+    }
+  }
 }
