ヘッダーに画像追加

--- a/src/scss/NavigationBar.scss
+++ b/src/scss/NavigationBar.scss
@@ -3,10 +3,19 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');
 nav {
-  font-family: 'Dela Gothic One', sans-serif;
   background-color: #dd1e24;
-  color: #fff2f2;
   height: 10vh;
-  font-size: 5vh;
-  @include mixins.itemCenter;
+
+  h1 {
+    height: 100%;
+    font-family: 'Dela Gothic One', sans-serif;
+    color: #fff2f2;
+    font-size: 1.75rem;
+    @include mixins.itemCenter;
+  }
+  .titleLogo {
+    height: 50%;
+    margin-bottom: 20px;
+    margin-right: 3px;
+  }
 }
