--- a/src/scss/Card.scss
+++ b/src/scss/Card.scss
@@ -1,7 +1,8 @@
 /* カードComponent用CSS */
+@use 'variables'; // 変数読み込み
 
 .card {
-  width: 290px;
+  width: variables.$cardWidth;
 
   /* カードの影 */
   align-items: center;
@@ -10,15 +11,15 @@
   background-color: rgba(178, 38, 85, 0.025);
   border-radius: 5px;
   box-shadow: 5px 5px 6px 0px rgba(96, 58, 136, 0.75);
-}
 
-.cardName {
-  padding: 0;
-  font-size: 1.25rem;
-  margin-top: 0;
-  margin-bottom: 10px;
-}
+  .cardImg {
+    margin-top: 10px;
+  }
 
-.cardInfo {
-  text-align: center;
+  .cardName {
+    padding: 0;
+    font-size: 1.25rem;
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
 }
