--- a/src/scss/Loading.scss
+++ b/src/scss/Loading.scss
@@ -9,7 +9,7 @@ div.loading {
   height: 100%;
   width: 100%;
   z-index: 99;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   font-size: 1.75rem;
