ポケモン表示コンポーネント一旦完成とそのCSS

--- a/src/scss/Base.scss
+++ b/src/scss/Base.scss
@@ -17,7 +17,7 @@
   justify-items: center;
   align-items: center;
   gap: variables.$cardGap;
-  margin-top: 20px;
+  margin: 2vw;
 }
 
 // ページ移動ボタン
