--- a/src/scss/Card.scss
+++ b/src/scss/Card.scss
@@ -3,6 +3,7 @@
 
 .card {
   width: variables.$cardWidth;
+  padding: 0 3% 3%;
 
   /* カードの影 */
   align-items: center;
@@ -13,13 +14,23 @@
   box-shadow: 5px 5px 6px 0px rgba(96, 58, 136, 0.75);
 
   .cardImg {
-    margin-top: 10px;
+    width: 90%;
+    text-align: center;
   }
 
   .cardName {
     padding: 0;
-    font-size: 1.25rem;
+    font-size: 1.2rem;
     margin-top: 0;
     margin-bottom: 10px;
+  }
+
+  .cardTypes {
+    display: flex;
+    justify-content: space-evenly;
+
+    img {
+      width: 47.5%;
+    }
   }
 }
