--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -4,3 +4,13 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin displayTile {
+  font-size: 0.75em;
+  margin: 1px 2px;
+  padding: 2px 5px;
+  border: 1px solid;
+  border-radius: 5px;
+  background-color: #dcdcdc;
+  color: #fff;
+}
