--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,3 +1,7 @@
+// 設定読み込み
+@use 'variables'; // 変数読み込み
+
+// 本体 //
 // 上下左右中央寄せ
 @mixin itemCenter {
   display: flex;
@@ -31,4 +35,77 @@
 
 @mixin areaAppContents {
   padding: 1.5em 5px 0.75em; /* 内側余白 */
+}
+
+@mixin hrLine {
+  border: none;
+  height: 1px;
+  width: 90%;
+  margin: 5px auto 10px;
+  align-self: center;
+  background-color: var(--borderColor);
+}
+
+@mixin imageOnOff {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  .switchBox {
+    margin: 25px 0;
+    // 見た目の設定
+    position: relative;
+    width: variables.$switchWidth;
+    height: variables.$switchHeight;
+    border-radius: 50px;
+    overflow: hidden;
+    cursor: pointer;
+
+    // 縦向きにする
+    transform: rotate(90deg);
+
+    // チェックボックスは見せない
+    input[type='checkbox'] {
+      display: none;
+    }
+
+    // 通常表示
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: block;
+      background: #e9e9eb;
+      -webkit-transition: 0.2s ease-out;
+      transition: 0.2s ease-out;
+    }
+    &::after {
+      content: '';
+      position: absolute;
+      top: 3px;
+      left: 3px;
+      width: variables.$switchButtonSize;
+      height: variables.$switchButtonSize;
+      display: block;
+      border-radius: 50px;
+      background: #fff;
+      box-shadow: 0 9px 28px -6px rgba(0, 0, 0, 0.3);
+      -webkit-transition: 0.2s ease-out;
+      transition: 0.2s ease-out;
+    }
+
+    // キラ表示
+    &.checked:before {
+      background: var(--titleBorderColor); // MainModal.scssに設定
+    }
+    &.checked::after {
+      left: variables.$switchMoveLeft;
+      box-shadow: 0 9px 28px -6px rgba(0, 0, 0, 0.5);
+    }
+  }
 }
