画像差分比較機能修正

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -65,6 +65,9 @@
 
     // 縦向きにする
     transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
 
     // チェックボックスは見せない
     input[type='checkbox'] {
