リスト表示時のスタイル設定

--- a/src/scss/Base.scss
+++ b/src/scss/Base.scss
@@ -16,14 +16,18 @@
 }
 
 // 各ポケモンのカードをグリッドで表示
-
 .pokemonCardContainer {
-  margin: 10px;
-  margin-left: 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(variables.$cardWidth + variables.$cardGap, 1fr));
-  justify-items: center;
-  align-items: self-start;
-  row-gap: variables.$cardGap;
-  column-gap: math.div(variables.$cardGap, 2);
+  &.grid {
+    margin: 10px;
+    margin-left: 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(variables.$cardWidth + variables.$cardGap, 1fr));
+    justify-items: center;
+    align-items: self-start;
+    row-gap: variables.$cardGap;
+    column-gap: math.div(variables.$cardGap, 2);
+  }
+  &.list {
+    margin: 10px;
+  }
 }
