--- a/src/scss/Card.scss
+++ b/src/scss/Card.scss
@@ -1,40 +1,98 @@
 /* カードComponent用CSS */
 @use 'variables'; // 変数読み込み
 
-.card {
-  width: variables.$cardWidth;
-  padding: 0 3% 3%;
+.grid {
+  .card {
+    width: variables.$cardWidth;
+    padding: 0 3% 3%;
 
+    align-items: center;
+    justify-content: center;
+
+    .cardImg {
+      width: 80%;
+      text-align: center;
+    }
+
+    .cardName {
+      padding: 0;
+      font-size: 1.2rem;
+      margin-top: 0;
+      margin-bottom: 10px;
+
+      .difNm {
+        font-size: 0.8em;
+      }
+    }
+
+    .cardTypes {
+      display: flex;
+      justify-content: space-evenly;
+
+      img {
+        width: 47.5%;
+      }
+    }
+  }
+}
+.list {
+  div.card {
+    width: 95%;
+    height: 10vh;
+    margin: 20px auto;
+    display: grid;
+    grid-template-columns: 25% 20% 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    align-items: center;
+    justify-content: center;
+
+    img {
+      grid-column: 1;
+      grid-row: 1 / -1;
+      margin: 0 auto;
+      height: 90%;
+      object-fit: contain;
+    }
+
+    h3 {
+      grid-column: 2;
+      grid-row: 1;
+    }
+
+    .cardName {
+      grid-column: 3;
+      grid-row: 1;
+      width: 100%;
+      margin: 0 10px;
+      text-align: left;
+
+      .difNm {
+        display: inline;
+        font-size: 0.8em;
+        margin-left: 10px;
+      }
+    }
+
+    .cardTypes {
+      grid-column: 2/-1;
+      grid-row: 2;
+      margin: 10px;
+
+      text-align: left;
+
+      img {
+        width: 35%;
+        margin-right: 10px;
+        object-fit: contain;
+      }
+    }
+  }
+}
+
+.card {
   /* カードの影 */
-  align-items: center;
-  justify-content: center;
   color: #333333;
   background-color: rgba(178, 38, 85, 0.025);
   border-radius: 5px;
   box-shadow: 5px 5px 6px 0px rgba(96, 58, 136, 0.75);
-
-  .cardImg {
-    width: 80%;
-    text-align: center;
-  }
-
-  .cardName {
-    padding: 0;
-    font-size: 1.2rem;
-    margin-top: 0;
-    margin-bottom: 10px;
-
-    .difNm {
-      font-size: 0.8em;
-    }
-  }
-
-  .cardTypes {
-    display: flex;
-    justify-content: space-evenly;
-
-    img {
-      width: 47.5%;
-    }
-  }
 }
