背景色変更

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ img {
 }
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  background-color: rgba(96, 58, 136, 0.05);
+  background-color: #fdf8f6;
 }
 
 html,
