--- a/src/scss/Loading.scss
+++ b/src/scss/Loading.scss
@@ -6,6 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Petit+Formal+Script&display=swap');
 
 div.loading {
+  z-index: 100;
   height: 100%;
   width: 100%;
   position: fixed;
