--- a/src/scss/NavigationBar.scss
+++ b/src/scss/NavigationBar.scss
@@ -63,6 +63,7 @@
     &.changeDisplayIcon {
       grid-column: 2;
       font-size: 1.5em;
+      border: none;
       .iconText {
         margin-top: -10px;
       }
