--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -16,7 +16,13 @@
 }
 
 @mixin areaAppTitle {
-  background-image: repeating-linear-gradient(-45deg, #f6eeec 0, #f6eeec 3px, #fafafa 3px, #fafafa 6px); /* ストライプ模様 */
+  background-image: repeating-linear-gradient(
+    -45deg,
+    #f6eeec 0,
+    #f6eeec 3px,
+    #fafafa 3px,
+    #fafafa 6px
+  ); /* ストライプ模様 */
   transform: rotate(-2deg); /* テープの傾き */
   box-shadow: 0 1px 2px rgb(0 0 0 / 0.1); /* テープの影 */
   padding: 0.5em 1em; /* 内側余白 */
@@ -62,6 +68,7 @@
     border-radius: 50px;
     overflow: hidden;
     cursor: pointer;
+    border: none;
 
     // 縦向きにする
     transform: rotate(90deg);
