--- a/src/scss/MainModal.scss
+++ b/src/scss/MainModal.scss
@@ -10,19 +10,7 @@
 
 // スタイル記述
 dialog.mainModal {
-  margin: auto;
-  // margin-top: variables.$safeTop;
-  width: 90vw;
-  height: 85vh;
-  background-color: #fafafa;
-  border: 1px solid #faeafa;
-  border-radius: 5px;
-  position: fixed; // buttonのabsoluteの下準備＋モーダルオープン時の背景位置固定
-  overflow: hidden; // モーダルの箱は動かさない
-
-  &:focus {
-    outline: none;
-  }
+  @include mixins.dialogBase;
 
   // 内容エリア
   .pokemonDetail {
