--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -119,3 +119,19 @@
     }
   }
 }
+
+@mixin dialogBase {
+  margin: auto;
+  // margin-top: variables.$safeTop;
+  width: 90vw;
+  height: 85vh;
+  background-color: #fafafa;
+  border: 1px solid #faeafa;
+  border-radius: 5px;
+  position: fixed; // buttonのabsoluteの下準備＋モーダルオープン時の背景位置固定
+  overflow: hidden; // モーダルの箱は動かさない
+
+  &:focus {
+    outline: none;
+  }
+}
